--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Welcome to My Application</h1>
-    <p><a href="Alexandra Miner JMCCSA Application.pdf" target="_blank">Open my application PDF</a></p>
+    <p><a href="index.pdf" target="_blank">Open my application PDF</a></p>
 </body>
 </html>
