--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Application PDF</title>
 </head>
 <body>
-    <h1>Welcome to My Application</h1>
+    <h1>Welcome to Alexandra Miner's Application</h1>
     <p><a href="index.pdf" target="_blank">Open my application PDF</a></p>
 </body>
 </html>
